@@ -70,7 +70,11 @@ class ReplicaCount  implements MapWriter {
   }
 
   void increment(ReplicaInfo info) {
-    switch (info.getType()) {
+    increment(info.getType());
+  }
+
+  public void increment(Replica.Type type) {
+    switch (type) {
       case NRT:
         nrt++;
         break;
@@ -96,5 +100,12 @@ class ReplicaCount  implements MapWriter {
 
   public void reset() {
     nrt = tlog = pull = 0;
+  }
+
+  public int delta(int expectedReplicaCount, Replica.Type type) {
+    if (type == Replica.Type.NRT) return (int) (nrt - expectedReplicaCount);
+    if (type == Replica.Type.PULL) return (int) (pull - expectedReplicaCount);
+    if (type == Replica.Type.TLOG) return (int) (tlog - expectedReplicaCount);
+    throw new RuntimeException("NO type");
   }
 }
