@@ -189,12 +189,14 @@ public abstract class Suggester implements MapWriter {
   }
 
   public static class SuggestionInfo implements MapWriter {
+    String type;
     Violation violation;
     SolrRequest operation;
 
-    public SuggestionInfo(Violation violation, SolrRequest op) {
+    public SuggestionInfo(Violation violation, SolrRequest op, String type) {
       this.violation = violation;
       this.operation = op;
+      this.type = type;
     }
 
     public SolrRequest getOperation() {
@@ -207,7 +209,7 @@ public abstract class Suggester implements MapWriter {
 
     @Override
     public void writeMap(EntryWriter ew) throws IOException {
-      ew.put("type", violation == null ? "improvement" : "violation");
+      ew.put("type", type);
       if(violation!= null) ew.put("violation",
           new ConditionalMapWriter(violation,
               (k, v) -> !"violatingReplicas".equals(k)));
