@@ -1,0 +1,123 @@
+{
+  "responseHeader":{
+    "status":0,
+    "QTime":23},
+  "diagnostics":{
+    "sortedNodes":[{
+      "node":"10.0.0.80:7575_solr",
+      "isLive":true,
+      "cores":1.0,
+      "freedisk":673.2483978271484,
+      "totaldisk":1037.938980102539,
+      "replicas":{"gettingstarted":{"shard1":[{
+        "core_node4":{
+          "core":"gettingstarted_shard1_replica_n1",
+          "shard":"shard1",
+          "collection":"gettingstarted",
+          "node_name":"10.0.0.80:7575_solr",
+          "type":"NRT",
+          "leader":"true",
+          "base_url":"http://10.0.0.80:7575/solr",
+          "state":"active",
+          "force_set_state":"false",
+          "INDEX.sizeInGB":6.426125764846802E-8}}]}}}
+    ,{
+        "node":"10.0.0.80:8983_solr",
+        "isLive":true,
+        "cores":1.0,
+        "freedisk":673.2483940124512,
+        "totaldisk":1037.938980102539,
+        "replicas":{"gettingstarted":{"shard2":[{
+          "core_node8":{
+            "core":"gettingstarted_shard2_replica_n5",
+            "shard":"shard2",
+            "collection":"gettingstarted",
+            "node_name":"10.0.0.80:8983_solr",
+            "type":"NRT",
+            "leader":"true",
+            "base_url":"http://10.0.0.80:8983/solr",
+            "state":"active",
+            "force_set_state":"false",
+            "INDEX.sizeInGB":6.426125764846802E-8}}]}}}
+    ,{
+        "node":"10.0.0.80:8984_solr",
+        "isLive":true,
+        "cores":1.0,
+        "freedisk":673.2483901977539,
+        "totaldisk":1037.938980102539,
+        "replicas":{"gettingstarted":{"shard1":[{
+          "core_node6":{
+            "core":"gettingstarted_shard1_replica_n2",
+            "shard":"shard1",
+            "collection":"gettingstarted",
+            "node_name":"10.0.0.80:8984_solr",
+            "type":"NRT",
+            "base_url":"http://10.0.0.80:8984/solr",
+            "state":"active",
+            "force_set_state":"false",
+            "INDEX.sizeInGB":6.426125764846802E-8}}]}}}],
+    "liveNodes":["10.0.0.80:7575_solr",
+      "10.0.0.80:8983_solr",
+      "10.0.0.80:8984_solr"],
+    "violations":[],
+    "config":{
+      "cluster-preferences":[{
+        "minimize":"cores",
+        "precision":1}
+      ,{
+          "maximize":"freedisk"}]}},
+
+  "cluster":{
+    "collections":{
+      "gettingstarted":{
+        "pullReplicas":"0",
+        "replicationFactor":"2",
+        "shards":{
+          "shard1":{
+            "range":"80000000-ffffffff",
+            "state":"active",
+            "replicas":{
+              "core_node4":{
+                "core":"gettingstarted_shard1_replica_n1",
+                "base_url":"http://10.0.0.80:7575/solr",
+                "node_name":"10.0.0.80:7575_solr",
+                "state":"active",
+                "type":"NRT",
+                "force_set_state":"false",
+                "leader":"true"},
+              "core_node6":{
+                "core":"gettingstarted_shard1_replica_n2",
+                "base_url":"http://10.0.0.80:8984/solr",
+                "node_name":"10.0.0.80:8984_solr",
+                "state":"active",
+                "type":"NRT",
+                "force_set_state":"false"}}},
+          "shard2":{
+            "range":"0-7fffffff",
+            "state":"active",
+            "replicas":{
+              "core_node7":{
+                "core":"gettingstarted_shard2_replica_n3",
+                "base_url":"http://10.0.0.80:7574/solr",
+                "node_name":"10.0.0.80:7574_solr",
+                "state":"down",
+                "type":"NRT",
+                "force_set_state":"false"},
+              "core_node8":{
+                "core":"gettingstarted_shard2_replica_n5",
+                "base_url":"http://10.0.0.80:8983/solr",
+                "node_name":"10.0.0.80:8983_solr",
+                "state":"active",
+                "type":"NRT",
+                "force_set_state":"false",
+                "leader":"true"}}}},
+        "router":{"name":"compositeId"},
+        "maxShardsPerNode":"-1",
+        "autoAddReplicas":"false",
+        "nrtReplicas":"2",
+        "tlogReplicas":"0",
+        "znodeVersion":12,
+        "configName":"gettingstarted"}},
+    "live_nodes":["10.0.0.80:8983_solr",
+      "10.0.0.80:7575_solr",
+      "10.0.0.80:8984_solr"]}}
